# SortVisualizer

./: README.md  pyproject.toml
sortvisualizer/: __init__.py  __main__.py  data_class.py
sortvisualizer/sortalgorithms/: __init__.py  base.py  selectionsort.py
tests/: test_sortvisualizer.py
