[tool.poetry]
name = "SortVisualizer"
version = "0.1.0"
description = ""
authors = ["Hassan Pouralijan <pouralijan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
